This file documents the major additions and syntax changes between releases.

1.4.7 ??
	check_procs uses /usr/ucb/ps if available - fixes pst3 problems on Solaris
	Fixed MKINSTALLDIRS problem in po/
	Fixed broken HELO in check_smtp
	Root plugins installed with world executable
	./configure now detects if possible to compile check_mysql
	check_sybase from contrib now maintained in NagiosExchange

1.4.6 5th February 2007
	Reduced number of DNS lookups in check_ping and netutils.c for IPv6 configurations
	Fixed compile problems with *BSD re: alloca.h
	Fixed Solaris problems with check_swap (tested on Solaris 9)
	Fixed check_swap for HP/UX where swapinfo command was incorrect
	Fixed check_disk inode threshold checks, regressed at r1.4.4.
	Fixed crit/warn for check_disk perf data
	Fixed buffer overflow in check_procs
	Fixed error handling for UNIX sockets in netutils.c
	New -q and -o options for check_by_ssh which are handed over to ssh(1) as is
	Synced with latest GNUlib
	Fixed check_jabber always returns warning

1.4.5
	Fixed bug in perl's is_hostname routine

1.4.4
	New C based check_ntp. The perl version is now deprecated.
	New check_apt plugin
	Notice: plugins in contrib/ will start to be removed from this distribution.
	  Please check at http://www.nagiosexchange.org for contributed plugins
	Major bug fixes to check_disk where values were incorrectly calculated and alerted on.
	check_udp2 removed. check_udp is now linked to check_tcp.c
	check_mailq now errors if the sub-program run returns non-zero return code. This would appear
	  as if mailqs were okay when the nagios user could not query the mail-queues
	Compile problems with check_snmp fixed

1.4.3
	Setuid plugins (check_dhcp, check_icmp) separated into plugins-root/. Run make install as root to install
	SSL plugins work with gnutls as well as OpenSSL
	check_mysql_query added to run arbitrary SQL commands, with threshold checking
	libtool now required for development systems