@@ -3,7 +3,7 @@
 * Nagios check_icmp plugin
 *
 * License: GPL
-* Copyright (c) 2005-2006 nagios-plugins team
+* Copyright (c) 2005-2007 nagios-plugins team
 *
 * Original Author : Andreas Ericsson <ae@op5.se>
 *
@@ -46,7 +46,7 @@
 /* char *progname = "check_icmp"; */
 char *progname;
 const char *revision = "$Revision$";
-const char *copyright = "2005-2006";
+const char *copyright = "2005-2007";
 const char *email = "nagiosplug-devel@lists.sourceforge.net";
 
 /** nagios plugins basic includes */
@@ -212,6 +212,7 @@ static struct timeval prog_start;
 static unsigned long long max_completion_time = 0;
 static unsigned char ttl = 0;	/* outgoing ttl */
 static unsigned int warn_down = 1, crit_down = 1; /* host down threshold values */
+static int min_hosts_alive = -1;
 float pkt_backoff_factor = 1.5;
 float target_backoff_factor = 1.5;
 
@@ -437,7 +438,7 @@ main(int argc, char **argv)
 
 	/* parse the arguments */
 	for(i = 1; i < argc; i++) {
-		while((arg = getopt(argc, argv, "vhVw:c:n:p:t:H:i:b:I:l:")) != EOF) {
+		while((arg = getopt(argc, argv, "vhVw:c:n:p:t:H:i:b:I:l:m:")) != EOF) {
 			switch(arg) {
 			case 'v':
 				debug++;
@@ -470,6 +471,9 @@ main(int argc, char **argv)
 				break;
 			case 'l':
 				ttl = (unsigned char)strtoul(optarg, NULL, 0);
+				break;
+			case 'm':
+				min_hosts_alive = (int)strtoul(optarg, NULL, 0);
 				break;
 			case 'd': /* implement later, for cluster checks */
 				warn_down = (unsigned char)strtoul(optarg, &ptr, 0);
@@ -585,6 +589,11 @@ main(int argc, char **argv)
 	if(packets > 20) {
 		errno = 0;
 		crash("packets is > 20 (%d)", packets);
+	}
+
+	if(min_hosts_alive < -1) {
+		errno = 0;
+		crash("minimum alive hosts is negative (%i)", min_hosts_alive);
 	}
 
 	host = list;
@@ -879,6 +888,8 @@ finish(int sig)
 	struct rta_host *host;
 	char *status_string[] =
 	{"OK", "WARNING", "CRITICAL", "UNKNOWN", "DEPENDENT"};
+	int hosts_ok = 0;
+	int hosts_warn = 0;
 
 	alarm(0);
 	if(debug > 1) printf("finish(%d) called\n", sig);
@@ -911,13 +922,25 @@ finish(int sig)
 		}
 		host->pl = pl;
 		host->rta = rta;
-		if(!status && (pl >= warn.pl || rta >= warn.rta)) status = STATE_WARNING;
-		if(pl >= crit.pl || rta >= crit.rta) status = STATE_CRITICAL;
+		if(pl >= crit.pl || rta >= crit.rta) {
+			status = STATE_CRITICAL;
+		}
+		else if(!status && (pl >= warn.pl || rta >= warn.rta)) {
+			status = STATE_WARNING;
+			hosts_warn++;
+		}
+		else {
+			hosts_ok++;
+		}
 
 		host = host->next;
 	}
 	/* this is inevitable */
 	if(!targets_alive) status = STATE_CRITICAL;
+	if(min_hosts_alive > -1) {
+		if(hosts_ok >= min_hosts_alive) status = STATE_OK;
+		else if((hosts_ok + hosts_warn) >= min_hosts_alive) status = STATE_WARNING;
+	}
 	printf("%s - ", status_string[status]);
 
 	host = list;
@@ -964,10 +987,15 @@ finish(int sig)
 		host = host->next;
 	}
 
+	if(min_hosts_alive > -1) {
+		if(hosts_ok >= min_hosts_alive) status = STATE_OK;
+		else if((hosts_ok + hosts_warn) >= min_hosts_alive) status = STATE_WARNING;
+	}
+
 	/* finish with an empty line */
 	puts("");
-	if(debug) printf("targets: %u, targets_alive: %u\n",
-					 targets, targets_alive);
+	if(debug) printf("targets: %u, targets_alive: %u, hosts_ok: %u, hosts_warn: %u, min_hosts_alive: %i\n",
+					 targets, targets_alive, hosts_ok, hosts_warn, min_hosts_alive);
 
 	exit(status);
 }
@@ -1211,6 +1239,9 @@ print_help(void)
   printf (" %s\n", "-I");
   printf ("    %s", _("max target interval (currently "));
   printf ("%0.3fms)\n", (float)target_interval / 1000);
+  printf (" %s\n", "-m");
+  printf ("    %s",_("number of alive hosts required for success"));
+  printf ("\n");
   printf (" %s\n", "-l");
   printf ("    %s", _("TTL on outgoing packets (currently "));
   printf ("%u)", ttl);
@@ -1228,10 +1259,12 @@ print_help(void)
   printf ("%s\n", _("packet loss.  The default values should work well for most users."));
   printf ("%s\n", _("You can specify different RTA factors using the standardized abbreviations"));
   printf ("%s\n\n", _("us (microseconds), ms (milliseconds, default) or just plain s for seconds."));
-  printf ("%s\n", _("Threshold format for -d is warn,crit.  12,14 means WARNING if >= 12 hops"));
+/* -d not yet implemented */
+/*  printf ("%s\n", _("Threshold format for -d is warn,crit.  12,14 means WARNING if >= 12 hops"));
   printf ("%s\n", _("are spent and CRITICAL if >= 14 hops are spent."));
-  printf ("%s\n\n", _("NOTE: Some systems decrease TTL when forming ICMP_ECHOREPLY, others do not."));
+  printf ("%s\n\n", _("NOTE: Some systems decrease TTL when forming ICMP_ECHOREPLY, others do not."));*/
   printf ("%s\n\n", _("The -v switch can be specified several times for increased verbosity."));
+
 /*  printf ("%s\n", _("Long options are currently unsupported."));
   printf ("%s\n", _("Options marked with * require an argument"));
 */
